# Copyright (c) 2016 CERN
# @author Michele Castellana <michele.castellana@cern.ch>
#
# This source code is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
#
# This source code is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this code.  If not, see <http://www.gnu.org/licenses/>.
#
#---------------------------------------------------------------------------

ACLOCAL_AMFLAGS = -I m4

noinst_LTLIBRARIES = libvvptarget.la

libvvptarget_la_CPPFLAGS = \
	-I$(top_srcdir) /

libvvptarget_la_SOURCES = \
	draw_class.c \
	draw_enum.c \
	draw_mux.c \
	draw_net_input.c \
	draw_substitute.c \
	draw_switch.c \
	draw_ufunc.c \
	draw_vpi.c \
	eval_bool.c \
	eval_condit.c \
	eval_expr.c \
	eval_object.c \
	eval_real.c \
	eval_string.c \
	eval_vec4.c \
	modpath.c \
	stmt_assign.c \
	vector.c \
	vvp.c \
	vvp_process.c \
	vvp_scope.c
